# EUDM-AL-iLQR

./: 111.txt  EUDM_AL_iLQR_详细说明.md  EUDM决策输出数据详解.md  EUDM决策过程技术文档.md  EUDM序列组合数量说明.md  GDB_DEBUG_GUIDE.md  LQR_WARM_START_ANALYSIS.md  README.md  TROUBLESHOOTING.md  USAGE.md  debug_ilqr.sh  ilqr_lane_change_optimization.py  时空走廊.py
devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/vehicle_msgs/: ArenaInfo.h  ArenaInfoDynamic.h  ArenaInfoStatic.h  Circle.h  CircleObstacle.h  ControlSignal.h  FreeState.h  Lane.h  LaneNet.h  ObstacleSet.h  OccupancyGridFloat.h  OccupancyGridUInt8.h  PolygonObstacle.h  State.h  Vehicle.h  VehicleParam.h  VehicleSet.h
devel/lib/ilqr_planner/: ilqr_planner_node
devel/lib/pkgconfig/: ai_agent_planner.pc  aux_tools.pc  behavior_planner.pc  common.pc  eudm_planner.pc  forward_simulator.pc  ilqr_planner.pc  motion_predictor.pc  phy_simulator.pc  planning_integrated.pc  route_planner.pc  semantic_map_manager.pc  ssc_planner.pc  vehicle_model.pc  vehicle_msgs.pc
devel/lib/planning_integrated/: test_ssc_with_mpdm
devel/share/ai_agent_planner/cmake/: ai_agent_plannerConfig.cmake
devel/share/aux_tools/cmake/: aux_toolsConfig.cmake
devel/share/behavior_planner/cmake/: behavior_plannerConfig.cmake
devel/share/common/cmake/: commonConfig.cmake
devel/share/eudm_planner/cmake/: eudm_plannerConfig.cmake
devel/share/forward_simulator/cmake/: forward_simulatorConfig.cmake
devel/share/gennodejs/ros/vehicle_msgs/msg/: FreeState.js  Lane.js  OccupancyGridFloat.js  OccupancyGridUInt8.js  _index.js
devel/share/ilqr_planner/cmake/: ilqr_plannerConfig.cmake
devel/share/motion_predictor/cmake/: motion_predictorConfig.cmake
devel/share/phy_simulator/cmake/: phy_simulatorConfig.cmake
devel/share/planning_integrated/cmake/: planning_integratedConfig.cmake
devel/share/roseus/ros/vehicle_msgs/: manifest.l
devel/share/roseus/ros/vehicle_msgs/msg/: Lane.l  LaneNet.l  ObstacleSet.l  VehicleSet.l
devel/share/route_planner/cmake/: route_plannerConfig.cmake
devel/share/semantic_map_manager/cmake/: semantic_map_managerConfig.cmake
devel/share/ssc_planner/cmake/: ssc_plannerConfig.cmake
devel/share/vehicle_model/cmake/: vehicle_modelConfig.cmake
devel/share/vehicle_msgs/cmake/: vehicle_msgs-msg-paths.cmake  vehicle_msgsConfig.cmake
src/EPSILON/app/planning_integrated/: CMakeLists.txt
src/EPSILON/app/planning_integrated/launch/: test_ilqr_with_eudm_ros.launch
src/EPSILON/app/planning_integrated/src/: test_ilqr_with_eudm.cc
src/EPSILON/core/common/inc/common/visualization/: common_visualization_util.h
src/EPSILON/core/forward_simulator/inc/forward_simulator/: onlane_forward_simulation.h
src/EPSILON/core/phy_simulator/rviz/: phy_simulator_planning.rviz
src/EPSILON/core/semantic_map_manager/src/: semantic_map_manager.cc  visualizer.cc
src/EPSILON/util/eudm_planner/inc/eudm_planner/: dcp_tree.h  visualizer.h
src/EPSILON/util/eudm_planner/src/eudm_planner/: dcp_tree.cc  eudm_manager.cc  eudm_planner.cc  map_adapter.cc
src/EPSILON/util/ilqr_planner/: CMakeLists.txt  README.md
src/EPSILON/util/ilqr_planner/inc/ilqr_planner/: cartesian_corridor_constraint.h  cartesian_dynamics.h  ilqr_al_ilqr_solver.h  ilqr_lqr_warm_start.h  ilqr_planner.h  ilqr_server_ros.h  ilqr_visualizer.h
src/EPSILON/util/ilqr_planner/launch/: ilqr_planner.launch
src/EPSILON/util/ilqr_planner/rviz/: ilqr_config.rviz
src/EPSILON/util/ilqr_planner/src/: ilqr_planner_node.cpp
src/EPSILON/util/ilqr_planner/src/ilqr_planner/: cartesian_corridor_constraint.cpp  cartesian_dynamics.cpp  ilqr_al_ilqr_solver.cpp  ilqr_lqr_warm_start.cpp  ilqr_planner.cpp  ilqr_server_ros.cpp  ilqr_visualizer.cpp
